Sun Oct 12 01:12:15 2003  Tim Janik  <timj@gtk.org>

	* fixes according to pspec hints->options change.

	* bserecords.idl: fixed indentation.

Sat Oct 11 22:10:18 2003  Tim Janik  <timj@gtk.org>

	* bsemain.c: bind gettext domain "bse" to BST_PATH_LOCALE.

Fri Oct 10 16:47:53 2003  Tim Janik  <timj@gtk.org>

	* icons/inport.c:
	* icons/outport.c:
	* icons/subsynth.c:
	* icons/virtual.xcf: replaced virtual in/out/subsynth icons.

	* icons/inport.xcf:
	* icons/outport.xcf:
	* icons/inoutport.c:
	* icons/icons/inoutport.xcf: removed.

Fri Oct 10 00:53:56 2003  Tim Janik  <timj@gtk.org>

	* bseamplifier.idl (Bse): *sigh* workaround bse/bse.idl include.

Fri Oct 10 00:22:03 2003  Tim Janik  <timj@gtk.org>

	* bseprocidl.cc (printInterface): *sigh* prevent BseAmplifier from
	being generated.

Thu Oct  9 23:28:10 2003  Tim Janik  <timj@gtk.org>

	* Makefile.am: added rules to build C++ modules from idl files.

	* bsecxxbase.[hc]*: wrap BseItem.compat_setup().

	* bsecxxmodule.[hc]*: allow setting the output buffer of a module.

	* bsecxxplugin.[hc]*: support in core "plugins", i.e. builtins.

	* bseitem.[hc]: added a method bse_item_compat_setup() to patch up
	object state during parsing according to an old *.bse version.

	* bseplugin.[hc]: provide export identity node for builtin types
	and initialize them.

	* bsestorage.[hc]: compat_setup() items after creation.

	* bseamplifier.cc, bseamplifier.idl: ported bseamplifier.[hc] to
	idl based C++ code. changed property setup to match BseBalance
	where appropriate. optimized inner loop, used C++ templates and
	bseincluder.h to generate processing loop special cases.
	added compat code to ensure compatibility with <=0.5.4 stored
	BseAmplifier setups.

	* bseamplifier.[hc]: removed.

	* bseincluder.h: generate switch()-able function calls with
	a constant integer argument (usefull for C++ templates) in
	the range 0..4096.

	* bse/icons/ampctrl.c: removed.
	* bse/icons/ampctrl.png: added.
